--- a/index.html
+++ b/index.html
@@ -15,21 +15,24 @@
 
 <!-- Navigation -->
 <div class="container-fluid">
-<div class="collapse" id="navbarToggleExternalContent">
-  <div class="bg-dark">
-    <h5 class="text-white h4"> Insert your logo here </h5>
-    <span class="text-muted">
+  <div class="collapse" id="navbarToggleExternalContent">
+    <div class="bg-dark">
+      <h5 class="text-white"> Insert your logo here </h5>
+      <span class="text-muted">
          <div class="nav-items">
-        
-            <li><a href="#"> Home </a></li>
-              <li><a href="#"> About </a></li>
+           <ul>
+               <li><a href="#"> Home </a></li>
+                <li><a href="#"> About </a></li>
                 <li><a href="#"> Our Services </a></li>
-                  <li><a href="#"> Our Team </a></li>
-                    <li><a href="#"> Contact </a></li>
-        </div>
-    </span>
+                <li><a href="#"> Our Team </a></li>
+                <li><a href="#"> Contact </a></li>
+            </ul>
+         </div>
+      </span>
+    </div>
   </div>
 </div>
+
 <nav class="navbar navbar-dark bg-dark">
   <div class="container-fluid">
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -37,94 +40,90 @@
     </button>
   </div>
 </nav>
-</div>
 
 
 <div class="container-fluid pt-5" style="background-color: rgba(155, 155, 201, 0.224);">
-
-
-    <div class="container  pt-4" id="hero-section">
-        <div class="row mx-auto row-cols-sm-2 ">
-           <div class="col-sm mb-3 text-center" id="hero-img">
-                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae quisquam voluptatibus, voluptatum magni quas inventore!
-            </div>
-          <div class="col mb-1">
-                <img src="pexels-chevanon-photography-1108099.jpg" class="img-fluid" alt="">
+  <div class="container  pt-4" id="hero-section">
+      <div class="row mx-auto row-cols-sm-2 ">
+          <div class="col-sm mb-3 text-center" id="hero-img">
+                <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae quisquam voluptatibus, voluptatum magni
+                 quas inventore!
+                </p>
           </div>
-        </div>
-      </div>
+          <div class="col mb-1">
+             <img src="pexels-chevanon-photography-1108099.jpg" class="img-fluid" alt="">
+          </div>
+       </div>
+    </div>
+</div>
 
-  </div>
-
-
-
-
-
-     <div class="container-fluid " style="border-top:3px solid rgb(227, 214, 214) ;border-bottom:3px solid rgb(227, 214, 214) ; background-color: aliceblue;">
+    <div class="container-fluid " style="border-top:3px solid rgb(227, 214, 214) ;border-bottom:3px solid rgb(227, 214, 214) ; background-color: aliceblue;">
        <div class="row mx-auto">
           <div class="col-lg-9" >       
         
-             <h4 class="title pt-3">I AM A TITLE </h4>  <p class="pt-2"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto tenetur deserunt quasi error animi, neque maiores. Temporibus perferendis tempora voluptas!
+             <h4 class="title pt-3">I AM A TITLE </h4>  
+             <p class="pt-2"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto tenetur deserunt quasi error animi, neque maiores. Temporibus perferendis tempora voluptas!
                 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Veritatis assumenda facilis illum dolor quidem odio quas, excepturi ipsa ratione ipsum?
-               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio blanditiis eveniet ipsa optio, perferendis earum exercitationem et assumenda expedita beatae reprehenderit unde adipisci nihil ducimus enim, eum aut doloremque quibusdam.</p>
+               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio blanditiis eveniet ipsa optio, perferendis earu
+               m exercitationem et assumenda expedita beatae reprehenderit unde adipisci nihil ducimus enim, eum aut doloremque quibusdam
+              </p>
             </div>
 
              <div class="col-sm-3 pb-5" style="border-left: 1px solid white ;"> 
                <h4 class="pt-3">Testimonials </h4> 
-               <p class="pt-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio blanditiis eveniet ipsa optio, perferendis earum exercitationem et assumenda expedita beatae reprehenderit unde adipisci nihil ducimus enim, eum aut doloremque quibusdam.</p>
+               <p class="pt-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio blanditiis eveniet ipsa optio, 
+                erferendis earum exercitationem et assumenda expedita beatae reprehenderit unde adipisci nihil ducimus enim, eum aut 
+                doloremque quibusdam.
+               </p>
             </div>
-
       </div>
     </div>
 
-
-
 <div class="container-fluid pt-5 ">
-         <h4 class="mb-3 ms-5"> Why choose Us </h4>
-         <div class="row mx-auto row-cols-sm-2 row-cols-md-4 p-4">
- 
+  <h4 class="mb-3 ms-5"> Why choose Us </h4>
+     <div class="row mx-auto row-cols-sm-2 row-cols-md-4 p-4">
            <div class="col-sm-3 " > 
               <div class="card mb-5" >
-             <img src="pexels-chevanon-photography-1108099.jpg" class="card-img-top" alt="...">
+                 <img src="pexels-chevanon-photography-1108099.jpg" class="card-img-top" alt="...">
                   <div class="card-body">
-                    <h5 class="card-title">Press Release </h5>
+                     <h5 class="card-title">Press Release </h5>
                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                      <a href="#" class="btn btn-secondary"> Read more </a>
                   </div>
             </div>
-        </div>
-            <div class="col-sm" > 
-                 <div class="card mb-5" >
-                   <img src="pexels-chevanon-photography-1108099.jpg" class="card-img-top" alt="...">
-                     <div class="card-body">
-                        <h5 class="card-title">Press Release </h5>
+          </div>
+          <div class="col-sm" > 
+              <div class="card mb-5" >
+                  <img src="pexels-chevanon-photography-1108099.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                       <h5 class="card-title">Press Release </h5>
                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
                        <a href="#" class="btn btn-secondary"> Read more </a>
                      </div>
-                  </div>
-             </div>
-              <div class="col-sm" >     
-                  <div class="card mb-5" >
-                      <img src="pexels-chevanon-photography-1108099.jpg" class="card-img-top" alt="...">
-                         <div class="card-body">
-                            <h5 class="card-title">Press Release </h5>
-                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                           <a href="#" class="btn btn-secondary"> Read more </a>
-                        </div>
-                  </div> 
               </div>
-            <div class="col-sm">
-                 <div class="card mb-5" >
-                   <img src="pexels-chevanon-photography-1108099.jpg" class="card-img-top" alt="...">
-                       <div class="card-body">
-                          <h5 class="card-title">Press Release </h5>
-                           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                           <a href="#" class="btn btn-secondary"> Read more </a>
-                       </div>
-                  </div>
+          </div>
+          <div class="col-sm" >     
+            <div class="card mb-5" >
+              <img src="pexels-chevanon-photography-1108099.jpg" class="card-img-top" alt="...">
+                  <div class="card-body">
+                      <h5 class="card-title">Press Release </h5>
+                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                      <a href="#" class="btn btn-secondary"> Read more </a>
+                   </div>
+            </div> 
+          </div>
+          <div class="col-sm">
+             <div class="card mb-5" >
+                <img src="pexels-chevanon-photography-1108099.jpg" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Press Release </h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <a href="#" class="btn btn-secondary"> Read more </a>
+                    </div>
+              </div>
            </div>
       </div>
-    </div>
+  </div>
 </div>
 
 </div>
