styed HTML content

--- a/index.html
+++ b/index.html
@@ -35,15 +35,14 @@
 
 <nav class="navbar navbar-dark bg-dark">
   <div class="container-fluid">
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
-    </button>
+      </button>
   </div>
 </nav>
 
-
-<div class="container-fluid pt-5" style="background-color: rgba(155, 155, 201, 0.224);">
-  <div class="container  pt-4" id="hero-section">
+<div class="container-fluid pt-5 " >
+  <div class="container pt-4 bg-success bg-opacity-25" id="hero-section">
       <div class="row mx-auto row-cols-sm-2 ">
           <div class="col-sm mb-3 text-center" id="hero-img">
                 <p> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae quisquam voluptatibus, voluptatum magni
@@ -57,9 +56,9 @@
     </div>
 </div>
 
-    <div class="container-fluid " style="border-top:3px solid rgb(227, 214, 214) ;border-bottom:3px solid rgb(227, 214, 214) ; background-color: aliceblue;">
+    <div class="container-fluid bg-success">
        <div class="row mx-auto">
-          <div class="col-lg-9" >       
+          <div class="col-lg-9" id="col1" >       
         
              <h4 class="title pt-3">I AM A TITLE </h4>  
              <p class="pt-2"> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Architecto tenetur deserunt quasi error animi, neque maiores. Temporibus perferendis tempora voluptas!
@@ -69,7 +68,7 @@
               </p>
             </div>
 
-             <div class="col-sm-3 pb-5" style="border-left: 1px solid white ;"> 
+             <div class="col-sm-3 pb-5"> 
                <h4 class="pt-3">Testimonials </h4> 
                <p class="pt-2">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Distinctio blanditiis eveniet ipsa optio, 
                 erferendis earum exercitationem et assumenda expedita beatae reprehenderit unde adipisci nihil ducimus enim, eum aut 
@@ -79,7 +78,7 @@
       </div>
     </div>
 
-<div class="container-fluid pt-5 ">
+<div class="container-fluid pt-5 bg-success bg-opacity-25">
   <h4 class="mb-3 ms-5"> Why choose Us </h4>
      <div class="row mx-auto row-cols-sm-2 row-cols-md-4 p-4">
            <div class="col-sm-3 " > 
@@ -126,7 +125,6 @@
   </div>
 </div>
 
-</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/2.9.2/umd/popper.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.1.0/js/bootstrap.min.js"></script>
 </body>
