restyled navbar to be mobile responsive

--- a/index.html
+++ b/index.html
@@ -9,35 +9,39 @@
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 <link rel="stylesheet" href="assets/css/style.css">
 <link rel="stylesheet" href="styles.css">
+<script src="https://kit.fontawesome.com/daeac0eefc.js" crossorigin="anonymous"></script>
 <title>Title</title>
 </head>
 <body>
 
 <!-- Navigation -->
-<div class="container-fluid">
-  <div class="collapse" id="navbarToggleExternalContent">
-    <div class="bg-dark">
-      <h5 class="text-white"> Insert your logo here </h5>
-      <span class="text-muted">
-         <div class="nav-items">
-           <ul>
-               <li><a href="#"> Home </a></li>
-                <li><a href="#"> About </a></li>
-                <li><a href="#"> Our Services </a></li>
-                <li><a href="#"> Our Team </a></li>
-                <li><a href="#"> Contact </a></li>
-            </ul>
-         </div>
-      </span>
-    </div>
-  </div>
-</div>
 
-<nav class="navbar navbar-dark bg-dark">
+<nav class="navbar navbar-expand-lg bg-dark">
   <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-      </button>
+    <a class="navbar-brand ms-5" href="#"> Your logo here </a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"> <i class="fa-solid fa-bars"></i> </span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <li class="nav-item dropdown">
+       
+          <ul class="dropdown-menu">
+            <li><a class="dropdown-item" href="#">About </a></li>
+            <li><a class="dropdown-item" href="#">Our Services </a></li>
+            <li><hr class="dropdown-item"> Our Team </li>
+            <li><a class="dropdown-item" href="#">Contact </a></li>
+          </ul>
+        </li>
+      </ul>
+   
+        <ul class="d-flex">
+          <li><a href="#" > Our Services </a></li>
+          <li><a  href="#"> Our Team </a></li>
+          <li><a  href="#"> Contact </a></li>
+        </ul>
+    
+    </div>
   </div>
 </nav>
 
