changed background color of main content

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
   </div>
 </nav>
 
-<div class="container-fluid pt-5 " >
+<div class="container-fluid pt-5 bg-primary bg-opacity-10" >
   <div class="container pt-4 bg-success bg-opacity-25" id="hero-section">
       <div class="row mx-auto row-cols-sm-2 ">
           <div class="col-sm mb-3 text-center" id="hero-img">
